@@ -1,6 +1,11 @@
+2004-09-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b191
+
+	* Fix: Change 'delete' to 'deleteButton' to prevent the JS errors
+	  onsubmit
+
 2004-09-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b190
 
-	Fix:  Added putenv("LC_ALL" ...) in lib/lang.php to fix problems on FreeBSD 4.10
+	* Fix:  Added putenv("LC_ALL" ...) in lib/lang.php to fix problems on FreeBSD 4.10
 
 2004-09-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b189
 
